--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.6",
     "morgan": "^1.9.0",
+    "mpath": "^0.5.1",
     "multer": "^1.3.1",
     "multer-storage-cloudinary": "^2.2.1",
     "nodemailer": "^4.6.8",
